--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -25,10 +25,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     - run: npm install -g yarn
     - name: yarn install, build and test
-      run: 
+      run: |
         yarn install
         yarn build
     - name: Archive Build
