--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -29,7 +29,7 @@ jobs:
     - name: yarn, build and test
       run: |
         yarn install
-        yarn build
+        yarn dev
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with: 
